tests/aquila/array.aq
let nums = [1, 2, 3];

/// -> 1
/// -> 2
/// -> 3
for num in nums {
    print(*num);
}

/// -> 2
def take_array(ar: [int; 3]) {
    print(ar.[1]);
}

take_array(nums);

/// error
take_array([1, 2]);
/// end
